--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -99,6 +99,10 @@ body {
   }
 }
 
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
 /* ------------------------ */
 /* Main Container */
 /* ------------------------ */
